# demo-langgraph-agent

./: .gitignore  README.md  pyproject.toml
src/: db.py  graph.py  langgraph.json  tools.py
src/models/: ticket.py
src/prompts/: admin.py  support.py
src/repository/: __init__.py  ticket_repository.py
src/service/: __init__.py  ticket_service.py
